--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -126,7 +126,7 @@ services:
             ME_CONFIG_MONGODB_ADMINUSERNAME: root
             ME_CONFIG_MONGODB_ADMINPASSWORD: MongoDB2022!
             ME_CONFIG_MONGODB_PORT: 27017
-            ME_CONFIG_MONGODB_SERVER: host.docker.internal
+            ME_CONFIG_MONGODB_SERVER: mongo-dronedb
         #hostname: mongo-express
         container_name: mongo-express
         ports:
@@ -151,7 +151,7 @@ services:
         image: ricardosoareslacerda/drone-kafka-producer:lastest
         environment:
             HOST_KAFKA_DOCKER_INTERNAL: kafka
-            HOST_PRODUCER_DOCKER_INTERNAL: host.docker.internal
+            HOST_PRODUCER_DOCKER_INTERNAL: drone-kafka-producer
             PORT_HOST_PRODUCER_DOCKER_INTERNAL: 8082
             KAFKA_GROUP: drone_group
             KAFKA_TOPIC: drone_topic
@@ -184,7 +184,6 @@ services:
         environment:
             HOST_KAFKA_DOCKER_INTERNAL: kafka
             MONGODB_HOST: mongo-dronedb
-            #MONGODB_HOST: host.docker.internal
             MONGODB_PORT: 27017
             MONGODB_AUTH_DATABASE: admin
             MONGODB_DATABASE: dronedb
@@ -192,7 +191,6 @@ services:
             MONGODB_PASSWORD: MongoDB2022!
             KAFKA_GROUP: drone_group
             KAFKA_TOPIC: drone_topic
-        hostname: drone-kafka-consumer
         container_name: drone-kafka-consumer
         #links:
         #   - kafka
