--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
         environment:
             KAFKA_BROKER_ID: 1
             KAFKA_ZOOKEEPER_CONNECT: "zookeeper1:2181"
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://host.docker.internal:29092
+            #KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://host.docker.internal:29092 - WSL2
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://localhost:29092
             KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT, PLAINTEXT_HOST:PLAINTEXT
             KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
@@ -123,7 +124,8 @@ services:
             ME_CONFIG_MONGODB_ADMINUSERNAME: root
             ME_CONFIG_MONGODB_ADMINPASSWORD: MongoDB2022!
             ME_CONFIG_MONGODB_PORT: 27017
-            ME_CONFIG_MONGODB_SERVER: host.docker.internal
+            #ME_CONFIG_MONGODB_SERVER: host.docker.internal - WSL2
+            ME_CONFIG_MONGODB_SERVER: mongo-dronedb
         hostname: mongo-express
         container_name: mongo-express
         ports:
@@ -148,7 +150,8 @@ services:
         image: ricardosoareslacerda/drone-kafka-producer:lastest
         environment:
             HOST_KAFKA_DOCKER_INTERNAL: kafka
-            HOST_PRODUCER_DOCKER_INTERNAL: host.docker.internal
+            #HOST_PRODUCER_DOCKER_INTERNAL: host.docker.internal - WSL2
+            HOST_PRODUCER_DOCKER_INTERNAL: drone-kafka-producer
             PORT_HOST_PRODUCER_DOCKER_INTERNAL: 8082
             KAFKA_GROUP: drone_group
             KAFKA_TOPIC: drone_topic
@@ -180,8 +183,8 @@ services:
             dockerfile: ./Dockerfile
         environment:
             HOST_KAFKA_DOCKER_INTERNAL: kafka
+            #MONGODB_HOST: host.docker.internal - WSL2
             MONGODB_HOST: mongo-dronedb
-            #MONGODB_HOST: host.docker.internal
             MONGODB_PORT: 27017
             MONGODB_AUTH_DATABASE: admin
             MONGODB_DATABASE: dronedb
@@ -216,6 +219,7 @@ services:
     drone-kafka-job:
         image: ricardosoareslacerda/drone-kafka-job:lastest
         environment:
+            #PATH_HOST_PRODUCER_DOCKER_INTERNAL: host.docker.internal:8082/api/v1/drones-monitor/ - WSL2
             PATH_HOST_PRODUCER_DOCKER_INTERNAL: drone-kafka-producer:8082/api/v1/drones-monitor/
             RESOURCE_API_HOST_PRODUCER: drones/register/
         hostname: drone-kafka-job
