--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -30,7 +30,7 @@ services:
         environment:
             KAFKA_BROKER_ID: 1
             KAFKA_ZOOKEEPER_CONNECT: "zookeeper1:2181"
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://host.docker.internal:29092
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://kafka_outside:29092
             KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT, PLAINTEXT_HOST:PLAINTEXT
             KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
@@ -39,7 +39,7 @@ services:
             - "/var/run/docker.sock:/var/run/docker.sock"
             - "kafka-data:/var/lib/kafka/data"
             - "kafka-data:/tmp/kafka-logs"
-        #hostname: kafka
+        hostname: kafka_outside
         container_name: kafka
         ports:
             - "29092:29092"
