--- a/docker-compose-kafka-broker.yml
+++ b/docker-compose-kafka-broker.yml
@@ -4,7 +4,7 @@ services:
         image: confluentinc/cp-kafka:5.5.0
         environment:
             KAFKA_BROKER_ID: 1
-            KAFKA_ZOOKEEPER_CONNECT: "zookeeper1:2181"
+            KAFKA_ZOOKEEPER_CONNECT: "zookeeper1:2181 zookeeper2:2181 zookeeper3:2181"
             KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://kafka:29092
             KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT, PLAINTEXT_HOST:PLAINTEXT
             KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
@@ -38,6 +38,3 @@ networks:
     broker-net:
         name: broker-net
         external: true
-volumes:
-    kafka-data:
-    kafka-data-logs:
