--- a/docker-compose-kafka-servers.yml
+++ b/docker-compose-kafka-servers.yml
@@ -6,7 +6,7 @@ services:
             ZOO_MY_ID: 1
             ZOO_PORT: 2181
             #ZOO_SERVERS: server.1=zookeeper1:2888:3888
-            ZOO_SERVERS: server.1=zookeeper1:2888:3888;2181 server.2=zookeeper2:2888:3888;2181 server.3=zookeeper3:2888:3888;2181
+            ZOO_SERVERS: server.1=zookeeper1:2888:3888 server.2=zookeeper2:2888:3888 server.3=zookeeper3:2888:3888
         volumes:
             - "zookeeper1-data:/var/lib/zookeeper1/data"
             - "zookeeper1-txn-logs:/var/lib/zookeeper1/log"
@@ -29,7 +29,7 @@ services:
         environment:
             ZOO_MY_ID: 2
             ZOO_PORT: 2182
-            ZOO_SERVERS: server.1=zookeeper1:2888:3888
+            ZOO_SERVERS: server.1=zookeeper1:2888:3888 server.2=zookeeper2:2888:3888 server.3=zookeeper3:2888:3888
         volumes:
             - "zookeeper2-data:/var/lib/zookeeper2/data"
             - "zookeeper2-txn-logs:/var/lib/zookeeper2/log"
@@ -52,7 +52,7 @@ services:
         environment:
             ZOO_MY_ID: 3
             ZOO_PORT: 2183
-            ZOO_SERVERS: server.1=zookeeper1:2888:3888
+            ZOO_SERVERS: server.1=zookeeper1:2888:3888 server.2=zookeeper2:2888:3888 server.3=zookeeper3:2888:3888
         volumes:
             - "zookeeper3-data:/var/lib/zookeeper3/data"
             - "zookeeper3-txn-logs:/var/lib/zookeeper3/log"
