Ajuste Integrations Docker Swarm

--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -11,6 +11,7 @@ services:
             - dronedb:/data/db
             - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
         container_name: mongo-dronedb
+        hostname: mongo-dronedb
         ports:
             - "27017:27017"
         networks:
@@ -38,6 +39,7 @@ services:
             ME_CONFIG_MONGODB_PORT: 27017
             ME_CONFIG_MONGODB_SERVER: mongo-dronedb
         container_name: mongo-express
+        hostname: mongo-express
         ports:
             - "8081:8081"
         networks:
