--- a/docker-compose-kafka-broker.yml
+++ b/docker-compose-kafka-broker.yml
@@ -4,6 +4,7 @@ services:
         image: confluentinc/cp-kafka:5.5.0
         environment:
             KAFKA_BROKER_ID: 1
+            #KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
             KAFKA_ZOOKEEPER_CONNECT: "zookeeper1:2181 zookeeper2:2181 zookeeper3:2181"
             KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://kafka:29092
             KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT, PLAINTEXT_HOST:PLAINTEXT
@@ -21,6 +22,7 @@ services:
             - broker-net
         restart: always
         depends_on:
+            #- zookeeper
             - zookeeper1
             - zookeeper2
             - zookeeper3
