--- a/docker-compose-kafka-cluster.yml
+++ b/docker-compose-kafka-cluster.yml
@@ -4,15 +4,15 @@ services:
         image: zookeeper:3.4.9
         environment:
             ZOO_MY_ID: 1
-            ZOO_PORT: 2181
-            ZOO_SERVERS: server.1=0.0.0.0:2888:3888 server.2=zookeeper2:2888:3888 server.3=zookeeper3:2888:3888
+            ZOO_PORT: 22181
+            ZOO_SERVERS: server.1=0.0.0.0:22888:23888;server.2=zookeeper2:32888:33888;server.3=zookeeper3:42888:43888
         volumes:
             - "zookeeper1-data:/var/lib/zookeeper1/data"
             - "zookeeper1-txn-logs:/var/lib/zookeeper1/log"
         container_name: zookeeper1
         hostname: zookeeper1
         ports:
-            - "2181:2181"
+            - "22181:22181"
         networks:
             - broker-net
         restart: always
@@ -28,15 +28,15 @@ services:
         image: zookeeper:3.4.9
         environment:
             ZOO_MY_ID: 2
-            ZOO_PORT: 2182
-            ZOO_SERVERS: server.1=zookeeper1:2888:3888 server.2=0.0.0.0:2888:3888 server.3=zookeeper3:2888:3888
+            ZOO_PORT: 32181
+            ZOO_SERVERS: server.1=zookeeper1:22888:23888;server.2=0.0.0.0:32888:33888;server.3=zookeeper3:42888:43888
         volumes:
             - "zookeeper2-data:/var/lib/zookeeper2/data"
             - "zookeeper2-txn-logs:/var/lib/zookeeper2/log"
         container_name: zookeeper2
         hostname: zookeeper2
         ports:
-            - "2182:2181"
+            - "32181:32181"
         networks:
             - broker-net
         restart: always
@@ -52,15 +52,15 @@ services:
         image: zookeeper:3.4.9
         environment:
             ZOO_MY_ID: 3
-            ZOO_PORT: 2183
-            ZOO_SERVERS: server.1=zookeeper1:2888:3888 server.2=zookeeper2:2888:3888 server.3=0.0.0.0:2888:3888
+            ZOO_PORT: 42181
+            ZOO_SERVERS: server.1=zookeeper1:22888:23888;server.2=zookeeper2:32888:33888;server.3=0.0.0.0:42888:43888
         volumes:
             - "zookeeper3-data:/var/lib/zookeeper3/data"
             - "zookeeper3-txn-logs:/var/lib/zookeeper3/log"
         container_name: zookeeper3
         hostname: zookeeper3
         ports:
-            - "2183:2181"
+            - "42181:42181"
         networks:
             - broker-net
         restart: always
