--- a/docker-compose-kafka-cluster.yml
+++ b/docker-compose-kafka-cluster.yml
@@ -5,7 +5,7 @@ services:
         environment:
             ZOO_MY_ID: 1
             ZOO_PORT: 22181
-            ZOO_SERVERS: server.1=0.0.0.0:22888:23888;server.2=zookeeper2:32888:33888;server.3=zookeeper3:42888:43888
+            ZOO_SERVERS: server.1=0.0.0.0:22888:23888 server.2=zookeeper2:32888:33888 server.3=zookeeper3:42888:43888
         volumes:
             - "zookeeper1-data:/var/lib/zookeeper1/data"
             - "zookeeper1-txn-logs:/var/lib/zookeeper1/log"
@@ -29,7 +29,7 @@ services:
         environment:
             ZOO_MY_ID: 2
             ZOO_PORT: 32181
-            ZOO_SERVERS: server.1=zookeeper1:22888:23888;server.2=0.0.0.0:32888:33888;server.3=zookeeper3:42888:43888
+            ZOO_SERVERS: server.1=zookeeper1:22888:23888 server.2=0.0.0.0:32888:33888 server.3=zookeeper3:42888:43888
         volumes:
             - "zookeeper2-data:/var/lib/zookeeper2/data"
             - "zookeeper2-txn-logs:/var/lib/zookeeper2/log"
@@ -53,7 +53,7 @@ services:
         environment:
             ZOO_MY_ID: 3
             ZOO_PORT: 42181
-            ZOO_SERVERS: server.1=zookeeper1:22888:23888;server.2=zookeeper2:32888:33888;server.3=0.0.0.0:42888:43888
+            ZOO_SERVERS: server.1=zookeeper1:22888:23888 server.2=zookeeper2:32888:33888 server.3=0.0.0.0:42888:43888
         volumes:
             - "zookeeper3-data:/var/lib/zookeeper3/data"
             - "zookeeper3-txn-logs:/var/lib/zookeeper3/log"
