--- a/docker-compose-kafka-broker-webui.yml
+++ b/docker-compose-kafka-broker-webui.yml
@@ -29,6 +29,8 @@ services:
         - "8888:8080"
         volumes:
         - "/var/run/docker.sock:/var/run/docker.sock"
+        networks:
+            - broker-net
         deploy:
             placement:
                 constraints: [node.role == manager]    
