--- a/docker-compose-kafka-broker-webui.yml
+++ b/docker-compose-kafka-broker-webui.yml
@@ -1,19 +1,17 @@
 version: '3.8'
 services:
-    kowl:
-        image: quay.io/cloudhut/kowl:v1.2.2
-        volumes:
-            - "/var/run/docker.sock:/var/run/docker.sock"
-            - ./kowl_config.yaml:/etc/kowl/config.yaml
-        entrypoint: ./kowl --config.filepath=/etc/kowl/config.yaml
-        container_name: kowl
+    kafkamanager: # https://github.com/yahoo/CMAK
+        image: kafkamanager/kafka-manager
+        container_name: kafkamanager
+        hostname: kafkamanager
         ports:
-            - "8080:8080"
-        networks:
-            - broker-net
-        restart: always
+            - 9000:9000
+        environment:
+            - "ZK_HOSTS=zookeeper1:22181,zookeeper2:32181,zookeeper3:42181"
         depends_on:
             - kafka
+        networks:
+            - broker-net
         deploy:
             replicas: 1
             placement:
@@ -25,6 +23,7 @@ services:
 
     visualizer:
         image: dockersamples/visualizer:stable
+        hostname: visualizer
         ports:
         - "8888:8080"
         volumes:
