--- a/docker-compose-kafka-broker-webui.yml
+++ b/docker-compose-kafka-broker-webui.yml
@@ -31,8 +31,13 @@ services:
         networks:
             - broker-net
         deploy:
+            replicas: 1
             placement:
-                constraints: [node.role == manager]    
+                constraints: [node.role == manager]
+                max_replicas_per_node: 1
+            restart_policy:
+                condition: on-failure
+                max_attempts: 1  
 
 # Networks to be created to facilitate communication between containers
 networks:
