--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -21,10 +21,10 @@ services:
             replicas: 1
             placement:
                 constraints: [node.role == manager]
-                max_replicas_per_node: 1
+                #max_replicas_per_node: 1
             restart_policy:
                 condition: on-failure
-                max_attempts: 1
+                max_attempts: 3
 
     mongo-express:
         image: mongo-express
@@ -48,13 +48,13 @@ services:
         depends_on:
             - mongo-dronedb
         deploy:
-            replicas: 1
+            replicas: 2
             placement:
                 constraints: [node.role == worker]
-                max_replicas_per_node: 1
+                #max_replicas_per_node: 1
             restart_policy:
                 condition: on-failure
-                max_attempts: 1    
+                max_attempts: 3  
 
 # Networks to be created to facilitate communication between containers
 networks:
