--- a/docker-compose-swarm-full.yml
+++ b/docker-compose-swarm-full.yml
@@ -1,23 +1,23 @@
 version: '3.8'
 services:
-    zookeeper1:
+    zookeeper:
         image: zookeeper:3.4.9
         environment:
             ZOO_MY_ID: 1
             ZOO_PORT: 2181
-            ZOO_SERVERS: server.1=zookeeper1:2888:3888
+            ZOO_SERVERS: server.1=zookeeper:2888:3888
         volumes:
             #- "/var/run/docker.sock:/var/run/docker.sock"
-            - "zookeeper1-data:/var/lib/zookeeper1/data"
-            - "zookeeper1-txn-logs:/var/lib/zookeeper1/log"
-        container_name: zookeeper1
+            - "zookeeper-data:/var/lib/zookeeper/data"
+            - "zookeeper-txn-logs:/var/lib/zookeeper/log"
+        container_name: zookeeper
         ports:
             - "2181:2181"
         networks:
             - broker-net
         restart: always
         deploy:
-            replicas: 3
+            replicas: 1
             placement:
                 constraints: [node.role == manager]
             restart_policy:
@@ -28,8 +28,8 @@ services:
         image: confluentinc/cp-kafka:5.5.0
         environment:
             KAFKA_BROKER_ID: 1
-            KAFKA_ZOOKEEPER_CONNECT: "zookeeper1:2181"
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://127.0.0.1:29092
+            KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, PLAINTEXT_HOST://kafka:29092
             KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT, PLAINTEXT_HOST:PLAINTEXT
             KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
@@ -40,11 +40,12 @@ services:
         container_name: kafka
         ports:
             - "29092:29092"
+            - "9092:9092"
         networks:
             - broker-net
         restart: always
         depends_on:
-            - zookeeper1
+            - zookeeper
         deploy:
             replicas: 1
             placement:
@@ -56,7 +57,7 @@ services:
     kowl:
         image: quay.io/cloudhut/kowl:v1.2.2
         volumes:
-            - "/var/run/docker.sock:/var/run/docker.sock"
+            #- "/var/run/docker.sock:/var/run/docker.sock"
             - ./kowl_config.yaml:/etc/kowl/config.yaml
         entrypoint: ./kowl --config.filepath=/etc/kowl/config.yaml
         container_name: kowl
@@ -67,11 +68,11 @@ services:
         restart: always
         depends_on:
             - kafka
-            - zookeeper1
+            - zookeeper
             - drone-kafka-producer
             - drone-kafka-consumer
         deploy:
-            replicas: 2
+            replicas: 1
             placement:
                 constraints: [node.role == manager]
             restart_policy:
@@ -85,8 +86,7 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: MongoDB2022!
             MONGO_INITDB_DATABASE: dronedb
         volumes:
-            #- "/var/run/docker.sock:/var/run/docker.sock"
-            - dronedb:/data/db
+            - "/var/run/docker.sock:/var/run/docker.sock"
             - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
         container_name: mongo-dronedb
         ports:
@@ -146,9 +146,9 @@ services:
         restart: always
         depends_on:
             - kafka
-            - zookeeper1
+            - zookeeper
         deploy:
-            replicas: 2
+            replicas: 1
             placement:
                 constraints: [node.role == worker]
             restart_policy:
@@ -180,10 +180,10 @@ services:
         restart: always
         depends_on:
             - kafka
-            - zookeeper1
+            - zookeeper
             - mongo-dronedb
         deploy:
-            replicas: 2
+            replicas: 1
             placement:
                 constraints: [node.role == worker]
             restart_policy:
@@ -202,7 +202,7 @@ services:
         restart: always
         depends_on:
             - kafka
-            - zookeeper1
+            - zookeeper
             - drone-kafka-producer
         deploy:
             replicas: 1
@@ -232,6 +232,5 @@ networks:
         name: broker-net
         external: true
 volumes:
-    dronedb:
-    zookeeper1-data:
-    zookeeper1-txn-logs:
+    zookeeper-data:
+    zookeeper-txn-logs:
