--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -7,7 +7,7 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: MongoDB2022!
             MONGO_INITDB_DATABASE: dronedb
         volumes:
-            - "/var/run/docker.sock:/var/run/docker.sock"
+            - "/dronedb:/var/run/docker.sock"
             - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
         container_name: mongo-dronedb
         hostname: mongo-dronedb
