--- a/docker-compose-kafka-broker-webui.yml
+++ b/docker-compose-kafka-broker-webui.yml
@@ -20,6 +20,28 @@ services:
                 condition: on-failure
                 max_attempts: 3
 
+    kowl:
+        image: quay.io/cloudhut/kowl:v1.2.2
+        volumes:
+            - ./kowl_config.yaml:/etc/kowl/config.yaml
+            - "/var/run/docker.sock:/var/run/docker.sock"
+        entrypoint: ./kowl --config.filepath=/etc/kowl/config.yaml
+        container_name: kowl
+        ports:
+            - "8080:8080"
+        networks:
+            - broker-net
+        restart: always
+        depends_on:
+            - kafka
+        deploy:
+            replicas: 1
+            placement:
+                constraints: [node.role == manager]
+            restart_policy:
+                condition: on-failure
+                max_attempts: 3
+
     visualizer:
         image: dockersamples/visualizer:stable
         hostname: visualizer
