--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -7,8 +7,8 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: MongoDB2022!
             MONGO_INITDB_DATABASE: dronedb
         volumes:
-            - "/dronedb:/data"
-            - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+            - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d
+            - "dronedb:/data/db"
         container_name: mongo-dronedb
         hostname: mongo-dronedb
         ports:
