--- a/docker-compose-swarm-full.a.yml
+++ b/docker-compose-swarm-full.a.yml
@@ -61,8 +61,7 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: MongoDB2022!
             MONGO_INITDB_DATABASE: dronedb
         volumes:
-            - "mongo-data:/data"
-            - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+            - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
         container_name: mongo-dronedb
         ports:
             - "27017:27017"
@@ -206,4 +205,3 @@ networks:
 volumes:
     zookeeper-data:
     zookeeper-txn-logs:
-    mongo-data:
