--- a/docker-compose-swarm-full.a.yml
+++ b/docker-compose-swarm-full.a.yml
@@ -61,7 +61,7 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: MongoDB2022!
             MONGO_INITDB_DATABASE: dronedb
         volumes:
-            - "./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro"
+            - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d
         container_name: mongo-dronedb
         ports:
             - "27017:27017"
