Ajuste Integrations Docker Swarm

--- a/stack-swarm-services.yml
+++ b/stack-swarm-services.yml
@@ -55,13 +55,14 @@ services:
                 max_attempts: 3
 
     mongo-dronedb:
-        image: mongo
+        image: mongo:latest
         environment:
             MONGO_INITDB_ROOT_USERNAME: root
             MONGO_INITDB_ROOT_PASSWORD: MongoDB2022!
             MONGO_INITDB_DATABASE: dronedb
         volumes:
-            - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d
+            - "mongo-data:/data/db"
+            - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/*.js
         container_name: mongo-dronedb
         ports:
             - "27017:27017"
@@ -135,41 +136,6 @@ services:
                 condition: on-failure
                 max_attempts: 3
 
-    visualizer:
-        image: dockersamples/visualizer:stable
-        ports:
-        - "8888:8080"
-        volumes:
-        - "/var/run/docker.sock:/var/run/docker.sock"
-        deploy:
-            replicas: 1
-            placement:
-                constraints: [node.role == manager] 
-            restart_policy:
-                condition: on-failure
-                max_attempts: 3
-
-    kowl:
-        image: quay.io/cloudhut/kowl:master
-        restart: unless-stopped
-        hostname: kowl
-        ports:
-            - 8100:8080
-        volumes:
-            - "./kowl_config.yaml:/etc/kowl/config.yaml"
-        entrypoint: ./kowl --config.filepath=/etc/kowl/config.yaml
-        networks:
-            - broker-net
-        depends_on:
-            - kafka
-        deploy:
-            replicas: 1
-            placement:
-                constraints: [node.role == manager]
-            restart_policy:
-                condition: on-failure
-                max_attempts: 3
-
 # Networks to be created to facilitate communication between containers
 networks:
     broker-net:
@@ -178,3 +144,4 @@ networks:
 volumes:
     zookeeper-data:
     zookeeper-txn-logs:
+    mongo-data:
