--- a/docker-compose/stack-broker-services.yml
+++ b/docker-compose/stack-broker-services.yml
@@ -16,14 +16,7 @@ services:
             - broker-net
         restart: always
         depends_on:
-            - kafka
-        deploy:
-            replicas: 1
-            placement:
-                constraints: [node.role == worker]
-            restart_policy:
-                condition: on-failure
-                max_attempts: 1
+            - kafk
 
     drone-kafka-consumer:
         image: ricardosoareslacerda/drone-kafka-consumer:lastest
@@ -52,13 +45,6 @@ services:
         depends_on:
             - kafka
             - mongo-dronedb
-        deploy:
-            replicas: 1
-            placement:
-                constraints: [node.role == worker]
-            restart_policy:
-                condition: on-failure
-                max_attempts: 3
 
 # Networks to be created to facilitate communication between containers
 networks:
