--- a/docker-compose/stack-broker.yml
+++ b/docker-compose/stack-broker.yml
@@ -24,18 +24,10 @@ services:
             - broker-net
         restart: always
         depends_on:
-            #- zookeeper
             - zookeeper1
-            - zookeeper2
-            - zookeeper3
-        deploy:
-            replicas: 1
-            placement:
-                constraints: [node.role == manager]
-            restart_policy:
-                condition: on-failure
-                max_attempts: 3
-
+            #- zookeeper2
+            #- zookeeper3
+#
 # Networks to be created to facilitate communication between containers
 networks:
     broker-net:
